@startuml

title __PROGA-LAB2's Class Diagram__\n

    class ru.ifmo.smehnov.moves.AerialAce {
              + AerialAce()
              # checkAccuracy()
              # describe()
     }
     class ru.ifmo.smehnov.moves.AirSlash {
               + AirSlash()
               # applyOppEffects()
               # describe()
           }

           class ru.ifmo.smehnov.moves.Bite {
                     + Bite()
                     # applyOppEffects()
                     # describe()
                 }


           class ru.ifmo.smehnov.moves.BugBuzz {
                     + BugBuzz()
                     # applyOppEffects()
                     # describe()
                 }

           class ru.ifmo.smehnov.moves.Facade {
                     + Facade()
                     # applySelfEffects()
                     # describe()
                 }
           class ru.ifmo.smehnov.moves.FocusEnergy {
                     + FocusEnergy()
                     # calcCriticalHit()
                     # describe()
                 }
           class ru.ifmo.smehnov.moves.IceBeam {
                     + IceBeam()
                     # applyOppEffects()
                     # describe()
                 }

           class ru.ifmo.smehnov.moves.Rest {
                     + Rest()
                     # applySelfEffects()
                     # describe()
                 }
           class ru.ifmo.smehnov.moves.Swagger {
                      + Swagger()
                      # applySelfEffects()
                      # describe()
                  }

           class ru.ifmo.smehnov.moves.WingAttack {
                     + WingAttack()
                     # describe()
                 }


class ru.ifmo.smehnov.pokemons.Deoxys {
          + Deoxys()
          + Deoxys()
      }

class ru.ifmo.smehnov.pokemons.Duosion {
          + Duosion()
          + Duosion()
      }

class ru.ifmo.smehnov.pokemons.Reuniclus {
          + Reuniclus()
          + Reuniclus()
      }
class ru.ifmo.smehnov.pokemons.Solosis {
          + Solosis()
          + Solosis()
      }

class ru.ifmo.smehnov.pokemons.Swellow {
          + Swellow()
          + Swellow()
      }
class ru.ifmo.smehnov.pokemons.Taillow {
          + Taillow()
          + Taillow()
      }

class ru.ifmo.smehnov.Main {
        {static} + main()
    }


  ru.ifmo.smehnov.moves.AerialAce -up-|> ru.ifmo.se.pokemon.PhysicalMove
  ru.ifmo.smehnov.moves.AirSlash -up-|> ru.ifmo.se.pokemon.SpecialMove
  ru.ifmo.smehnov.moves.Bite -up-|> ru.ifmo.se.pokemon.PhysicalMove
  ru.ifmo.smehnov.moves.BugBuzz -up-|> ru.ifmo.se.pokemon.SpecialMove
  ru.ifmo.smehnov.moves.Facade -up-|> ru.ifmo.se.pokemon.PhysicalMove
  ru.ifmo.smehnov.moves.FocusEnergy -up-|> ru.ifmo.se.pokemon.StatusMove
  ru.ifmo.smehnov.moves.IceBeam -up-|> ru.ifmo.se.pokemon.SpecialMove
  ru.ifmo.smehnov.moves.Rest -up-|> ru.ifmo.se.pokemon.StatusMove
  ru.ifmo.smehnov.moves.Swagger -up-|> ru.ifmo.se.pokemon.StatusMove
  ru.ifmo.smehnov.moves.WingAttack -up-|> ru.ifmo.se.pokemon.PhysicalMove
  ru.ifmo.se.pokemon.PhysicalMove -up-|> ru.ifmo.se.pokemon.Move
  ru.ifmo.se.pokemon.StatusMove -up-|> ru.ifmo.se.pokemon.Move
  ru.ifmo.se.pokemon.SpecialMove -up-|> ru.ifmo.se.pokemon.Move
  ru.ifmo.smehnov.pokemons.Deoxys -up-|> ru.ifmo.se.pokemon.Pokemon
  ru.ifmo.smehnov.pokemons.Duosion -up-|> ru.ifmo.smehnov.pokemons.Solosis
  ru.ifmo.smehnov.pokemons.Reuniclus -up-|> ru.ifmo.smehnov.pokemons.Duosion
  ru.ifmo.smehnov.pokemons.Solosis -up-|> ru.ifmo.se.pokemon.Pokemon
  ru.ifmo.smehnov.pokemons.Swellow -up-|> ru.ifmo.smehnov.pokemons.Taillow
  ru.ifmo.smehnov.pokemons.Taillow -up-|> ru.ifmo.se.pokemon.Pokemon


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
